Tue Feb 26 19:42:48 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/ManyTopicTest/DataReaderListener1.cpp:
        * tests/DCPS/ManyTopicTest/DataReaderListener2.cpp:
        * tests/DCPS/ManyTopicTest/DataReaderListener3.cpp:

          Check valid_data before reading sample data.

Mon Feb 25 21:59:32 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * NEWS:
        * README:

          Updated docs for upcoming release.

Mon Feb 25 16:08:32 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/ManyTopicTest/ManyTopicTest.mpc:
        * tests/DCPS/ManyTopicTest/publisher.cpp:
        * tests/DCPS/ManyTopicTest/subscriber.cpp:

          Enable this test on static builds.

Mon Feb 25 15:53:26 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/ManyTopicTest/DataReaderListener.h:
        * tests/DCPS/ManyTopicTest/DataReaderListener.cpp:
        * tests/DCPS/ManyTopicTest/DataReaderListener1.h:
        * tests/DCPS/ManyTopicTest/DataReaderListener1.cpp:
        * tests/DCPS/ManyTopicTest/DataReaderListener2.h:
        * tests/DCPS/ManyTopicTest/DataReaderListener2.cpp:
        * tests/DCPS/ManyTopicTest/DataReaderListener3.h:
        * tests/DCPS/ManyTopicTest/DataReaderListener3.cpp:
        * tests/DCPS/ManyTopicTest/common.h:
        * tests/DCPS/ManyTopicTest/publisher.cpp:
        * tests/DCPS/ManyTopicTest/subscriber.cpp:

          Fixed warnings.

Sun Feb 24 20:16:21 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/idl/IDLTemplate.txt:
          Also when compiling the type support with something other
          than tao_idl, use the sequence definition

Fri Feb 22 20:16:37 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:
        * tests/DCPS/ManyTopicTest/ManyTopicTest.mpc:
        * tests/DCPS/ManyTopicTest/Writer.cpp:
        * tests/DCPS/ManyTopicTest/common.h:
        * tests/DCPS/ManyTopicTest/publisher.cpp:
        * tests/DCPS/ManyTopicTest/rtps_disc.ini: