@@ -1,6 +1,6 @@
-This is OpenDDS version 3.4, released Fri Jan 18 16:55:39 UTC 2013.
+This is OpenDDS version 3.4.1, released Wed Feb 27 16:29:08 UTC 2013.
 
-    OpenDDS VERSION: 3.4
+    OpenDDS VERSION: 3.4.1
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
